# cli-tools

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.ps1
.github/: LOCAL_TESTING.md
.github/workflows/: codeql.yml  release.yml  rust-security.yml
hooks/: README.md  install-hooks.bat  install-hooks.ps1  install-hooks.sh  pre-commit
path-commander/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  KEYBINDING_REFERENCE.md  MC_COMPATIBILITY.md  README.md  THEMING_DESIGN.md  USER_GUIDE.md  build.bat  test_load.sh  test_theme.rs
path-commander/docs/development/: CHANGELOG.md  CONTRIBUTING.md  TESTING.md
path-commander/docs/theming/: COLORWAY_MAPPING.md  MC_COLOR_EXTRACTION.md
path-commander/docs/user/: USER_GUIDE.md
path-commander/src/: app.rs  backup.rs  config.rs  elevation.rs  main.rs  menu.rs  path_analyzer.rs  process_detector.rs  registry.rs  theme.rs  ui.rs
path-commander/tests/: integration_test.rs
path-commander/themes/: classic.ini  dracula-pc-enhanced.ini  monokai.ini
src/: app.rs  backup.rs  main.rs  path_analyzer.rs  permissions.rs  registry.rs  ui.rs
