[package]
name = "path-commander"
version = "0.1.0"
edition = "2021"
authors = ["Jesse Slaton <github@doxazo.net>"]
description = "A TUI for managing Windows PATH environment variables"
license = "MIT"

[[bin]]
name = "pc"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Environment",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
